# nordenvault-desktop

./: package-lock.json  package.json
.github/workflows/: release.yml
src/: App.css  App.tsx  api.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/api/: client.rs  types.rs
src-tauri/src/auth/: callback_server.rs  keychain.rs  mod.rs  oauth.rs  token.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/config/: mod.rs
src-tauri/src/tray/: mod.rs
src-tauri/src/upload/: queue.rs  worker.rs
src-tauri/src/watcher/: mod.rs
src/components/: Dashboard.tsx  Icons.tsx  LoginPage.tsx  SetupPage.tsx
