[package]
name = "nordenvault-desktop"
version = "0.1.0"
description = "NordenVault Desktop Agent"
authors = ["NordenVault"]
edition = "2021"

[lib]
name = "nordenvault_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-autostart = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
aws-sdk-s3 = "1"
aws-config = "1"
aws-credential-types = "1"
notify = "6"
notify-debouncer-mini = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
thiserror = "1"
anyhow = "1"
hostname = "0.4"
url = "2"
urlencoding = "2"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2"
